Fix #31395: setting mesh.uv_textures['uvmap'].active did not update correctly.